Using position:fixed so the overlay is visible even when the user starts scrolling

--- a/source/assets/css/_imports/overlay.less
+++ b/source/assets/css/_imports/overlay.less
@@ -1,6 +1,6 @@
 .search-result--overlay {
     background: rgba(82, 96, 107, .7);
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
